--- a/src/main/resources/templates/roll-dice.html
+++ b/src/main/resources/templates/roll-dice.html
@@ -11,5 +11,16 @@
 
     <h1>Select a number between 1 and 6</h1>
 
+    <ul>
+        <li><a th:href="@{/roll-dice/1}">1</a></li>
+        <li><a th:href="@{/roll-dice/2}">2</a></li>
+        <li><a th:href="@{/roll-dice/3}">3</a></li>
+        <li><a th:href="@{/roll-dice/4}">4</a></li>
+        <li><a th:href="@{/roll-dice/5}">5</a></li>
+        <li><a th:href="@{/roll-dice/6}">6</a></li>
+    </ul>
+
+
+
 </body>
 </html>
