--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -6,25 +6,15 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-
     <style>
-        #correct {color: green;}
-        #incorrect {color: red;}
+        .head {background-color: black; }
+        a {color: white}
     </style>
-
 </head>
 <body>
 
-<h2>You selected number <span th:text="${number}"></span></h2>
-
- <div th:if="${numMatch}">
-     <h3 id = correct>Congrats <span th:text="${number}"></span> was the correct answer</h3>
- </div>
-
-<div th:unless="${numMatch}">
-    <h3 id="incorrect">Sorry the correct answer was <span th:text="${random}"></span></h3>
-</div>
-
+    <div class="head" th:replace="partials/header.html :: navbar"></div>
+    <h1>This is the Landing Page</h1>
 
 <div th:replace="partials/footer.html :: footer"></div>
 </body>
