--- a/src/main/resources/templates/roll-dice.html
+++ b/src/main/resources/templates/roll-dice.html
@@ -6,21 +6,34 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <style>
+        .head{background-color: black}
+        a { color: white}
+        .head-txt {
+            color: black;
+        }
+
+    </style>
 </head>
+
 <body>
+    <div class="head" th:replace="partials/header.html :: navbar"></div>
 
-    <h1>Select a number between 1 and 6</h1>
+        <h1>Select a number between 1 and 6</h1>
 
-    <ul>
-        <li><a th:href="@{/roll-dice/1}">1</a></li>
-        <li><a th:href="@{/roll-dice/2}">2</a></li>
-        <li><a th:href="@{/roll-dice/3}">3</a></li>
-        <li><a th:href="@{/roll-dice/4}">4</a></li>
-        <li><a th:href="@{/roll-dice/5}">5</a></li>
-        <li><a th:href="@{/roll-dice/6}">6</a></li>
-    </ul>
+        <ul class="head-txt">
+            <li><a class="head-txt" th:href="@{/roll-dice/1}">1</a></li>
+            <li><a class="head-txt" th:href="@{/roll-dice/2}">2</a></li>
+            <li><a class="head-txt" th:href="@{/roll-dice/3}">3</a></li>
+            <li><a class="head-txt" th:href="@{/roll-dice/4}">4</a></li>
+            <li><a class="head-txt" th:href="@{/roll-dice/5}">5</a></li>
+            <li><a class="head-txt" th:href="@{/roll-dice/6}">6</a></li>
+        </ul>
 
 
 
+
+
+    <div th:replace="partials/footer.html :: footer"></div>
 </body>
 </html>
