--- a/src/main/resources/templates/posts/index.html
+++ b/src/main/resources/templates/posts/index.html
@@ -8,10 +8,15 @@
     <title>Document</title>
 </head>
 <body>
-<h1 th:text="${title}"></h1>
+    <div class="head" th:replace="partials/header.html :: navbar"></div>
+
+    <h1 th:text="${title}"></h1>
+
     <div th:each="post : ${posts}">
         <h2 th:text="${post.title}"></h2>
         <h3 th:text="${post.body}"></h3>
     </div>
+
+    <div th:replace="partials/footer.html :: footer"></div>
 </body>
 </html>
