--- a/src/main/resources/templates/posts/show.html
+++ b/src/main/resources/templates/posts/show.html
@@ -8,8 +8,12 @@
     <title>Document</title>
 </head>
 <body>
-<h1 th:text="${post.title}"></h1>
-<h3 th:text="${post.body}"></h3>
 
+    <div class="head" th:replace="partials/header.html :: navbar"></div>
+
+    <h1 th:text="${post.title}"></h1>
+    <h3 th:text="${post.body}"></h3>
+
+    <div th:replace="partials/footer.html :: footer"></div>
 </body>
 </html>
