--- a/src/main/resources/templates/posts/index.html
+++ b/src/main/resources/templates/posts/index.html
@@ -13,15 +13,15 @@
     <h1 th:text="${title}"></h1>
 
     <div th:each="post : ${posts}">
-        <h2 th:text="${post.title}"></h2>
+        <a th:text="${post.title}" th:href="@{|/posts/${post.id}|}"></a>
         <h3 th:text="${post.body}"></h3>
-        <form>
-            <button>Edit</button>
-        </form>
-        <form action="#" th:action="@{posts/delete}" method="post" th:object="${post}" th:value="${delete}">
-            <input name="id" th:value="${post.getId()}">
-            <button type="submit">Delete</button>
-        </form>
+<!--        <form  action="#" th:action="@{posts/edit}" method="post" th:object="${post}">-->
+<!--            <button>Edit</button>-->
+<!--        </form>-->
+<!--        <form action="#" th:action="@{posts/delete}" method="post" th:object="${post}" th:value="${delete}">-->
+<!--            <input name="id" th:value="${post.getId()}">-->
+<!--            <button type="submit">Delete</button>-->
+<!--        </form>-->
     </div>
 
     <div th:replace="partials/footer.html :: footer"></div>
