--- a/src/main/resources/templates/posts/show.html
+++ b/src/main/resources/templates/posts/show.html
@@ -14,6 +14,7 @@
     <h1 th:text="${post.title}"></h1>
     <h3 th:text="${post.body}"></h3>
 
+    <a th:href="@{|/posts/${post.id}/edit|}">Edit Post</a>
     <div th:replace="partials/footer.html :: footer"></div>
 </body>
 </html>
