--- a/src/main/resources/templates/partials/header.html
+++ b/src/main/resources/templates/partials/header.html
@@ -1,20 +1,8 @@
 <!doctype html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-    <style>
-        .head {background: black; display: flex;}
-        a {color: white;}
-    </style>
-
-</head>
 <body>
-    <div class="head">
-        <nav class="head" th:fragment="navbar">
+    <div class="teal lighten-2">
+        <nav class="teal lighten-2" th:fragment="navbar">
             <ul class="head-txt">
                 <li><a th:href="@{/}">Home</a></li>
                 <li><a th:href="@{/roll-dice}">Roll Dice</a></li>
@@ -24,6 +12,6 @@
         </nav>
     </div>
 
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 </body>
 </html>
