--- a/src/main/resources/templates/posts/create.html
+++ b/src/main/resources/templates/posts/create.html
@@ -1,11 +1,7 @@
 <!doctype html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+<head th:include="partials/head.html::head">
+
 </head>
 <body>
     <div class="head" th:replace="partials/header.html :: navbar"></div>
@@ -17,7 +13,7 @@
         <button type="submit" value="create post"></button>
     </form>
 
-
-
+    <div th:replace="partials/footer.html :: footer"></div>
+    <div th:replace="partials/scripts.html::scripts"></div>
 </body>
 </html>
