--- a/src/main/resources/templates/posts/edit.html
+++ b/src/main/resources/templates/posts/edit.html
@@ -1,11 +1,7 @@
 <!doctype html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+<head th:include="partials/head.html::head">
+
 </head>
 <body>
 <h1>This is the edit page</h1>
@@ -22,6 +18,9 @@
 
 <form th:action="@{|/posts/${post.id}/delete|}" th:method="POST">
     <button>Delete Post</button>
+
+    <div th:replace="partials/footer.html :: footer"></div>
+    <div th:replace="partials/scripts.html::scripts"></div>
 </form>
 </body>
 </html>
