--- a/src/main/resources/templates/roll-dice-result.html
+++ b/src/main/resources/templates/roll-dice-result.html
@@ -1,18 +1,9 @@
 <!doctype html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-
-    <style>
-        #correct {color: green;}
-        #incorrect {color: red;}
-    </style>
+<head th:include="partials/head.html::head">
 
 </head>
+
 <body>
 
 <h2>You selected number <span th:text="${number}"></span></h2>
@@ -27,5 +18,6 @@
 
 
 <div th:replace="partials/footer.html :: footer"></div>
+<div th:replace="partials/scripts.html::scripts"></div>
 </body>
 </html>
