--- a/src/main/resources/templates/roll-dice.html
+++ b/src/main/resources/templates/roll-dice.html
@@ -1,20 +1,6 @@
 <!doctype html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-    <style>
-        .head{background-color: black}
-        a { color: white}
-        .head-txt {
-            color: black;
-        }
-
-    </style>
-</head>
+<head th:include="partials/head.html::head"></head>
 
 <body>
     <div class="head" th:replace="partials/header.html :: navbar"></div>
@@ -35,5 +21,6 @@
 
 
     <div th:replace="partials/footer.html :: footer"></div>
+    <div th:replace="partials/scripts.html::scripts"></div>
 </body>
 </html>
