--- a/src/main/resources/templates/partials/scripts.html
+++ b/src/main/resources/templates/partials/scripts.html
@@ -1,6 +1,11 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 
 <div th:fragment="scripts" th:remove="tag">
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+   <script>
+       $(document).ready(function(){
+           $('.parallax').parallax();
+       });
+   </script>
 </div>
