--- a/src/main/resources/templates/posts/index.html
+++ b/src/main/resources/templates/posts/index.html
@@ -14,8 +14,24 @@
 <!--    </div>-->
 
     <div th:each="post : ${posts}">
-        <h4><a th:text="${post.title}" th:href="@{|/posts/${post.id}|}"></a></h4>
-        <p th:text="${post.body}"></p>
+        <div class="row">
+            <div class="col s12 m7">
+                <div class="card">
+                    <div class="card-image">
+                        <img th:src="@{/static/img/greenspring.jpg}">
+                    </div>
+                    <div class="card-content">
+                        <span class="card-title"><a th:text="${post.title}" th:href="@{|/posts/${post.id}|}"></a></span>
+                        <p th:text="${post.body}"></p>
+                    </div>
+                    <div class="card-action">
+                        <a href="#">This is a link</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+<!--        <h4><a th:text="${post.title}" th:href="@{|/posts/${post.id}|}"></a></h4>-->
+<!--        <p th:text="${post.body}"></p>-->
 <!--        <p th:text="${post.user.id}"></p>-->
     </div>
 
