added functionality to register a new user and add user to the database

--- a/src/main/resources/templates/partials/head.html
+++ b/src/main/resources/templates/partials/head.html
@@ -8,3 +8,4 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 
+<!--<head th:include="partials/head.html::head"></head>-->
