--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,10 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<head th:include="partials/head.html::head">
+    <title>Log In</title>
 </head>
 <body>
+<div th:replace="partials/header.html :: navbar"></div>
+
+
+<div class="container">
+    <h1>Log In</h1>
+    <div class="row">
+        <form class="col s12" th:action="@{/login}" method="POST">
+            <div class="row">
+                <div class="input-field col s12">
+                    <input placeholder="username" id="username" type="text" class="validate" name="username" />
+                </div>
+            </div>
+            <div class="row">
+                <div class="input-field col s12">
+                    <input placeholder="password" id="password" type="password" class="validate" name="password">
+                </div>
+            </div>
+
+            <button class="btn waves-effect waves-light" type="submit" name="action">Log In
+                <i class="material-icons right">send</i>
+            </button>
+        </form>
+    </div>
+</div>
+
 
 </body>
 </html>
