--- a/src/main/resources/templates/posts/index.html
+++ b/src/main/resources/templates/posts/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <div class="head" th:replace="partials/header.html :: navbar"></div>
-
+<div class="container">
     <h1 th:text="${title}"></h1>
 
 <!--    <div th:each="post : ${posts}">-->
@@ -34,6 +34,7 @@
 <!--        <p th:text="${post.body}"></p>-->
 <!--        <p th:text="${post.user.id}"></p>-->
     </div>
+</div>
 
 
     <div th:replace="partials/footer.html :: footer"></div>
