--- a/src/main/resources/templates/posts/show.html
+++ b/src/main/resources/templates/posts/show.html
@@ -8,10 +8,12 @@
 
     <h1 th:text="${post.title}"></h1>
     <h3 th:text="${post.body}"></h3>
+    <p th:text="'Authored by: ' + ${post.user.username}"></p>
 
     <a th:href="@{|/posts/${post.id}/edit|}">Edit Post</a>
 
     <div th:replace="partials/footer.html :: footer"></div>
     <div th:replace="partials/scripts.html::scripts"></div>
+
 </body>
 </html>
