--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -9,7 +9,7 @@
     <div th:replace="partials/header.html :: navbar"></div>
     <div class="parallax-container">
         <div class="parallax">
-            <img th:src="@{../static/img/greenspring.jpg}" alt="spring-backdrop" class="responsive-img">
+            <img th:src="@{../static/images/greenspring.jpg}" alt="spring-backdrop" class="responsive-img">
         </div>
         <h1>This is the Landing Page</h1>
     </div>
