--- a/src/main/resources/templates/posts/index.html
+++ b/src/main/resources/templates/posts/index.html
@@ -13,26 +13,19 @@
 <!--        <h3 th:text="${post.body}"></h3>-->
 <!--    </div>-->
 
-    <div th:each="post : ${posts}">
-        <div class="row">
-            <div class="col s12 m7">
+    <div class="row">
+        <div th:each="post : ${posts}">
+            <div class="col s12 m6 l4">
                 <div class="card">
                     <div class="card-image">
-                        <img th:src="@{/static/img/greenspring.jpg}">
+                        <img src="/images/greenspring.jpg" height="225">
                     </div>
                     <div class="card-content">
                         <span class="card-title"><a th:text="${post.title}" th:href="@{|/posts/${post.id}|}"></a></span>
-                        <p th:text="${post.body}"></p>
-                    </div>
-                    <div class="card-action">
-                        <a href="#">This is a link</a>
                     </div>
                 </div>
             </div>
         </div>
-<!--        <h4><a th:text="${post.title}" th:href="@{|/posts/${post.id}|}"></a></h4>-->
-<!--        <p th:text="${post.body}"></p>-->
-<!--        <p th:text="${post.user.id}"></p>-->
     </div>
 </div>
 
