--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -9,6 +9,13 @@
 
 <div class="container">
     <h1>Log In</h1>
+    <div th:if="${param.error}">
+        Invalid Username and Password.
+    </div>
+    <div th:if="${param.logout}">
+        You have been logged out.
+    </div>
+
     <div class="row">
         <form class="col s12" th:action="@{/login}" method="POST">
             <div class="row">
