--- a/src/main/resources/templates/partials/header.html
+++ b/src/main/resources/templates/partials/header.html
@@ -8,6 +8,13 @@
                 <li><a th:href="@{/roll-dice}">Roll Dice</a></li>
                 <li><a th:href="@{/posts}">View Posts</a></li>
                 <li><a th:href="@{/posts/create}">Create Posts</a></li>
+                <li><a th:href="@{/login}">Login</a></li>
+                <li><a th:href="@{/sign-up}">Register</a></li>
+                <li>
+                    <form th:action="@{/logout}" th:method="post">
+                        <button class="btn-link btn" style="margin-top: 5px">Logout</button>
+                    </form>
+                </li>
             </ul>
         </nav>
     </div>
