attempted to implement a fixed navbar currenlty unsuccessful

--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -5,3 +5,13 @@
 .parallax-container {
     height:500px;
 }
+
+.teal, .lighten-2 {
+    opacity: 50% !important;
+}
+
+.navbar {
+    position: fixed;
+    top: 0;
+    width: 100%;
+}
