--- a/src/main/resources/templates/posts/create.html
+++ b/src/main/resources/templates/posts/create.html
@@ -6,12 +6,16 @@
 <body>
     <div class="head" th:replace="partials/header.html :: navbar"></div>
 
-    <h2>Create A New Post</h2>
-    <form th:action="@{/posts/create}" th:method="POST" th:object="${post}">
-        <input id="title" name="title" placeholder="title" type="text" th:value="*{title}"/>
-        <textarea id="body" th:field="*{body}"></textarea>
-        <button type="submit" value="create post"></button>
-    </form>
+    <div class="container">
+        <h2>Create A New Post</h2>
+        <form th:action="@{/posts/create}" th:method="POST" th:object="${post}">
+            <input id="title" name="title" placeholder="title" type="text" th:value="*{title}"/>
+            <textarea style="height: 300px" id="body" placeholder="your blog here" th:field="*{body}"></textarea>
+            <button class="btn waves-effect waves-light" type="submit" name="action">Create Post
+                <i class="material-icons right">send</i>
+            </button>
+        </form>
+    </div>
 
     <div th:replace="partials/footer.html :: footer"></div>
     <div th:replace="partials/scripts.html::scripts"></div>
