--- a/src/main/resources/templates/posts/show.html
+++ b/src/main/resources/templates/posts/show.html
@@ -6,11 +6,15 @@
 
     <div class="head" th:replace="partials/header.html :: navbar"></div>
 
-    <h1 th:text="${post.title}"></h1>
-    <h3 th:text="${post.body}"></h3>
-    <p th:text="'Authored by: ' + ${post.user.username}"></p>
+    <div class="container">
+        <h1 th:text="${post.title}"></h1>
+        <p th:text="${post.body}"></p>
+        <h4 th:text="'Authored by: ' + ${post.user.username}"></h4>
 
-    <a th:href="@{|/posts/${post.id}/edit|}">Edit Post</a>
+        <a th:href="@{|/posts/${post.id}/edit|}">Edit Post</a>
+
+
+    </div>
 
     <div th:replace="partials/footer.html :: footer"></div>
     <div th:replace="partials/scripts.html::scripts"></div>
