--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -19,3 +19,12 @@
 .featured-posts-title {
     text-align: center !important;
 }
+
+.card {
+    margin-top: 50px;
+}
+
+textarea {
+    height: 400px !important;
+}
+
