--- a/src/main/resources/templates/partials/scripts.html
+++ b/src/main/resources/templates/partials/scripts.html
@@ -6,6 +6,7 @@
     <script>
         $(document).ready(function(){
             $('.parallax').parallax();
+            $('.modal').modal();
         });
     </script>
 </div>
