--- a/src/main/resources/templates/partials/header.html
+++ b/src/main/resources/templates/partials/header.html
@@ -3,7 +3,7 @@
 <!--<head th:include="partials/head.html::head"></head>-->
 <body>
     <div class="navbar-fixed teal lighten-2">
-        <nav class="navbar-fixed teal lighten-2" th:fragment="navbar">
+        <nav class="navbar-fixed orange lighten-2" th:fragment="navbar">
             <ul class="head-txt">
                 <li><a th:href="@{/}">Home</a></li>
                 <li><a th:href="@{/roll-dice}">Roll Dice</a></li>
@@ -13,7 +13,7 @@
                 <li><a th:href="@{/sign-up}">Register</a></li>
                 <li>
                     <form th:action="@{/logout}" th:method="post">
-                        <button class="btn-link btn" style="margin-top: 5px">Logout</button>
+                        <button class="btn-link btn" style="margin-top: 0; background-color: transparent; box-shadow: none ">Logout</button>
                     </form>
                 </li>
             </ul>
