no major changes

--- a/src/main/resources/templates/partials/footer.html
+++ b/src/main/resources/templates/partials/footer.html
@@ -11,5 +11,9 @@
 <footer th:fragment="footer">
     &copy; This is the footer
 </footer>
+
+
+
+<!--<div th:include="partials/footer.html :: footer"></div>-->
 </body>
 </html>
