added user profile and edit functionaity

--- a/src/main/resources/templates/partials/header.html
+++ b/src/main/resources/templates/partials/header.html
@@ -11,7 +11,7 @@
                 <li><a th:href="@{/posts/create}">Create Posts</a></li>
                 <li><a th:href="@{/login}">Login</a></li>
                 <li><a th:href="@{/sign-up}">Register</a></li>
-<!--                <li><a th:href="@{/user}">Profile</a></li>-->
+                <li><a th:href="@{/user}">Profile</a></li>
                     <form th:action="@{/logout}" th:method="post">
                         <button class="btn-link btn" style="margin-top: 0; background-color: transparent; box-shadow: none ">Logout</button>
                     </form>
