encased list of numbered dice in a div container

--- a/src/main/resources/templates/roll-dice.html
+++ b/src/main/resources/templates/roll-dice.html
@@ -4,7 +4,7 @@
 
 <body>
     <div class="head" th:replace="partials/header.html :: navbar"></div>
-
+    <div class="container">
         <h1>Select a number between 1 and 6</h1>
 
         <ul class="head-txt">
@@ -15,7 +15,7 @@
             <li><a class="head-txt" th:href="@{/roll-dice/5}">5</a></li>
             <li><a class="head-txt" th:href="@{/roll-dice/6}">6</a></li>
         </ul>
-
+    </div>
 
 
 
