--- a/src/main/resources/templates/partials/footer.html
+++ b/src/main/resources/templates/partials/footer.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 <body>
-<footer th:fragment="footer">
+<footer style="position: absolute; top: 100%" th:fragment="footer">
     &copy; This is the footer
 </footer>
 
