--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -13,10 +13,10 @@
             <div class="parallax">
                 <img th:src="@{images/bird-branch.jpg}" alt="spring-backdrop" class="responsive-img">
             </div>
-            <h1 class="teal-text text-lighten-5" >Spring Blog</h1>
+            <h1 class="teal-text text-lighten-5 spring-blog-title" >Spring Blog</h1>
         </div>
 
-        <div>
+        <div class="para-style">
             <h1 class="featured-posts-title">Featured Posts</h1>
 
             <div class="row">
