added exclamation to about title

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -16,7 +16,7 @@
 
         <div class="text-container">
             <div class="text-style">
-                <h1>About Spring Blog</h1>
+                <h1>About Spring Blog!</h1>
                 <h5>Hello and Welcome to Spring Blog.</h5>
                 <h5>
                     As you explore the homepage, you may notice an interesting theme. If you were thinking SPRING, you guessed it.
