added logic to set footer to the bottom of webpage

--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -3,6 +3,10 @@ body{
     overflow: scroll;
 }
 
+.posts-align{
+    overflow: scroll;
+}
+
 .card-image{
     background-image: url("../images/greenspring.jpg") !important;
 }
