--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -7,7 +7,7 @@
     <h1 th:text="'Welcome Back ' + ${user}"></h1>
 
 
-    <div class="row">
+    <div class="row posts-align">
         <div th:each="post : ${posts}">
             <div class="col s12 m6 l4">
                 <div class="card">
