added github and linkedin links to footer

--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -75,6 +75,20 @@ footer, .footer {
     color: black;
 }
 
+.footer-list{
+    list-style-type: none;
+    display: flex;
+}
+
+.footer-list > li {
+    margin-left: 10px;
+    color: coral !important;
+}
+
+.footer-list > a {
+    color: darkcyan !important;
+
+}
 
 .heading {
     text-align: center;
