--- a/src/main/resources/templates/partials/footer.html
+++ b/src/main/resources/templates/partials/footer.html
@@ -5,10 +5,16 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" th:src="@{../static/css/styles.css}">
     <title>Document</title>
 </head>
 <body>
 <footer style="position: relative; bottom: 0%" th:fragment="footer">
+    <h5>DEVELOPER: AMBER MATTIS</h5>
+    <ul class="footer-list">
+        <li><a href="https://github.com/AmberMattis" class="teal-text  text-lighten-3">Github</a></li>
+        <li><a href="https://www.linkedin.com/in/amber-mattis/"  class="teal-text  text-lighten-3">Linkedin</a></li>
+    </ul>
     &copy; This is the footer
 </footer>
 
