added styling to post cards added border radius

--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -39,6 +39,7 @@ body{
 
 .card {
     margin-top: 50px;
+    border-radius: 20px;
 }
 
 textarea {
@@ -113,6 +114,10 @@ footer, .footer {
 .text-style {
     text-align: center;
     color: dimgrey;
+}
+
+img {
+    border-radius: 20px;
 }
 
 
